Source/WebKit/WebProcess/WebPage/gtk/WebPageGtk.cpp
@@ -67,6 +67,10 @@ void WebPage::platformInitialize()
 #endif
 }
 
+void WebPage::platformReinitialize()
+{
+}
+
 void WebPage::platformDetach()
 {
 }
