Source/WebKit/WebProcess/WebPage/win/WebPageWin.cpp
@@ -55,6 +55,10 @@ void WebPage::platformInitialize()
 {
 }
 
+void WebPage::platformReinitialize()
+{
+}
+
 void WebPage::platformDetach()
 {
 }
